<resources>
    <string name="app_name">Rider</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_voice_search">VoiceSearchActivity</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>
    <string-array name="multi_select_list_preference_default_value" />
    <string name="pref_sco_summary">SCO mode simulates bluetooth headset to Communication mode</string>
    <string name="pref_sco_title">Enable Bluetooth SCO</string>
    <string name="pref_general_title">General</string>
    <string name="pref_call_title">Call</string>
    <string name="pref_sms_title">SMS</string>
    <string name="pref_autodetect_title">Auto detect driving</string>
    <string name="pref_autodetect_summary">Using Bluetooth and Activity Detection events app is triggered to run</string>
    <string name="sharedPref_file_key">in.hedera.reku.speechtrial.isRunning</string>
    <string name="isRunning">isRunning</string>
    <string name="pref_call_reject_sms_title">Reject Message</string>
    <string name="pref_call_reject_sms_default">Sorry am unable to talk right now. Will call you later.</string>
    <string name="no">no</string>
    <string name="yes">yes</string>
    <string name="notification_listener_service_explanation">For the the app. to work you need to enable the Notification Listener Service. Enable it now?</string>
    <string name="notification_listener_service">Rider</string>
</resources>
