<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/pref_general_title"
        android:key="pref_key_general_settings">

    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/pref_default_display_name"
        android:inputType="textCapWords"
        android:key="example_text"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_display_name" />

    <SwitchPreference
        android:defaultValue="false"
        android:key="pref_sco_key"
        android:summary="@string/pref_sco_summary"
        android:title="@string/pref_sco_title" />

        <SwitchPreference
            android:defaultValue="false"
            android:key="pref_autodetect_key"
            android:summary="@string/pref_autodetect_summary"
            android:title="@string/pref_autodetect_title" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_call_title"
        android:key="pref_key_call_settings">

        <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
        dismiss it. -->
        <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
        <ListPreference
            android:title="Incoming Call Action"
            android:key="pref_call_action"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"
            android:defaultValue="-1"
            android:entries="@array/pref_call_action_list_titles"
            android:entryValues="@array/pref_call_action__list_values"
            />

        <EditTextPreference
            android:defaultValue="@string/pref_call_reject_sms_default"
            android:inputType="text"
            android:key="pref_call_reject_sms"
            android:maxLines="3"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/pref_call_reject_sms_title"
            android:enabled="false" />
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/pref_sms_title"
        android:key="pref_key_sms_settings">

        <ListPreference
            android:title="Incoming SMS Action"
            android:key="pref_sms_action"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"
            android:defaultValue="-1"
            android:entries="@array/pref_sms_action_list_titles"
            android:entryValues="@array/pref_sms_action__list_values"
            />
    </PreferenceCategory>>
</PreferenceScreen>
